--- a/selfindex.css
+++ b/selfindex.css
@@ -4,21 +4,22 @@
 }
 .header-home {
   text-align: center;
-  position: relative;
+  position: static;
 }
 body {
   text-align: center;
   padding-top: 20px;
 }
 img {
-  margin: 40px 0px 0px 0px;
+  margin: 5px 0px 0px 0px;
   border: 0px solid white;
   border-radius: 20px;
 }
 h1 {
+  font-size: 34px;
   letter-spacing: 3px;
   color: teal;
-  font-weight: 700;
+  font-weight: 600;
 }
 h2 {
   line-height: 1;
@@ -30,6 +31,7 @@ h2 {
 }
 .social-links > .link {
   margin: 0;
+  size: 40px;
   text-decoration: none;
   position: relative;
   display: inline-block;
@@ -37,17 +39,24 @@ h2 {
   width: 40px;
 }
 .nav-home {
+  color: aquamarine;
+  position: static;
   margin-top: 40px;
   text-align: center;
   font-size: 20px;
-  color: aquamarine;
 }
 ul {
+  color: aquamarine;
   padding: 10px;
 }
 li {
+  color: aquamarine;
   display: inline;
-  padding: 0px 10px 0px 10px;
+  padding: 5px 10px 5px 10px;
+}
+i {
+  color: darkorchid;
+  size: 40px;
 }
 .footer-main {
   padding: 40px 0;
@@ -56,5 +65,5 @@ li {
   color: paleturquoise;
   font-weight: 300;
   text-align: center;
-  position: relative;
+  position: static;
 }
